# kindredd

./: .gitignore  CMakeLists.txt  README.md
src/: data.hpp  main.cpp
